--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
 body {
-  margin: 0;
+  /* margin: 0; */
+  /* overflow-x: hidden; */
 }
-
+#app {
+  background-color: #ffffff;
+}
 .main {
-  width: 100vw;
+  /* width: 100vw; */
+  /* width: 1440px; */
+  /* margin: 0 auto; */
+  min-height: 100vh;
+}
+.three {
+  width: 100%;
   height: 100vh;
-  background-color: white;
 }
