--- a/src/components/Parallax/Parallax.css
+++ b/src/components/Parallax/Parallax.css
@@ -8,7 +8,7 @@
         z-index: 2;
         text-align: center;
         position: absolute;
-        top: 5%;
+        top: 15%;
         left: 50%;
         transform: translate3d(-50%, calc(var(--scrollTop) / 1.3), 0);
     }
@@ -27,22 +27,46 @@
     }
     .parallax__full {
         z-index: 1;
-        background-image: url('/public/0.png');
+        background-image: url('/public/parallax/1K/full.png');
         transform: translate3d(0, calc(var(--scrollTop) / 1.6), 0);
+        @media screen and (min-width: 2560px) {
+            background-image: url('/public/parallax/2K/full.png');
+        }
+        @media screen and (min-width: 3840px) {
+            background-image: url('/public/parallax/4K/full.png');
+        }
     }
     .parallax__back {
         z-index: 2;
-        background-image: url('/public/S4.png');
+        background-image: url('/public/parallax/1K/back.png');
         transform: translate3d(0, calc(var(--scrollTop) / 2), 0);
+        @media screen and (min-width: 2560px) {
+            background-image: url('/public/parallax/2K/back.png');
+        }
+        @media screen and (min-width: 3840px) {
+            background-image: url('/public/parallax/4K/back.png');
+        }
     }
     .parallax__middle {
         z-index: 3;
-        background-image: url('/public/S3.png');
-        transform: translate3d(0, calc(var(--scrollTop) / 3), 0);
+        background-image: url('/public/parallax/1K/middle.png');
+        transform: translate3d(0, calc(var(--scrollTop) / 4), 0);
+        @media screen and (min-width: 2560px) {
+            background-image: url('/public/parallax/2K/middle.png');
+        }
+        @media screen and (min-width: 3840px) {
+            background-image: url('/public/parallax/4K/middle.png');
+        }
     }
     .parallax__front {
         z-index: 4;
-        background-image: url('/public/S2.png');
+        background-image: url('/public/parallax/1K/front.png');
         transform: translate3d(0, calc(var(--scrollTop) / 5), 0);
+        @media screen and (min-width: 2560px) {
+            background-image: url('/public/parallax/2K/front.png');
+        }
+        @media screen and (min-width: 3840px) {
+            background-image: url('/public/parallax/4K/front.png');
+        }
     }
 }
