--- a/src/section/DiscoverPortugal/DiscoverPortugal.css
+++ b/src/section/DiscoverPortugal/DiscoverPortugal.css
@@ -1,19 +1,34 @@
 .discover-portugal {
     .discover-portugal__item {
-        width: 100%;
+        overflow: hidden;
+        width: 100vw;
         height: 100vh;
         padding: 5rem;
         display: flex;
         align-items: center;
         gap: 6rem;
         position: sticky;
+        top: 0;
          * {
             flex: 1 1 50%;
         }
     }
+    .textbox {
+        max-width: 45%;
+        padding: 3rem;
+    }
     .discover-portugal__image {
-        width: 50%;
+        position: absolute;
+        top: 0;
+        right: -50%;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
-        background-color: black;
+        transition: right 1s ease-out;
+        /* filter: contrast(150%) saturate(110%); */
+        &:hover {
+            right: 0;
+            transition: right 1s ease-out;
+        }
     }
 }
