--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,4 +1,12 @@
 .title {
-    font-size: 104px;
-    color: white;
+    font-size: 10rem;
+    font-weight: 900;
+    letter-spacing: 1rem;
+    color: #fff;
+    transition: all 0.5s ease-out;
+}
+.title._active {
+    letter-spacing: -0.75rem;
+    color: #ffffff56;
+    transition: all 1s ease-out;
 }
