--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
   color-scheme: light dark;
   font-synthesis: none;
@@ -6,6 +8,7 @@
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
+  font-family: "Montserrat", sans-serif;
   font-size: 100%;
   line-height: 1;
   -webkit-text-size-adjust: 100%;
