--- a/src/components/Parallax/Parallax.css
+++ b/src/components/Parallax/Parallax.css
@@ -3,14 +3,18 @@
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+    display: flex;
+    place-content: center;
     .parallax__title {
         display: block;
         z-index: 2;
         text-align: center;
         position: absolute;
-        top: 15%;
-        left: 50%;
-        transform: translate3d(-50%, calc(var(--scrollTop) / 1.3), 0);
+        /* top: 50%; */
+        inset: 20% 0 0 0;
+        /* margin: auto; */
+        /* left: 50%; */
+        transform: translateY(calc(var(--scrollTop) / 1.3));
     }
     .parallax__full,
     .parallax__back,
