--- a/src/section/TravelPlan/TravelPlan.css
+++ b/src/section/TravelPlan/TravelPlan.css
@@ -6,7 +6,7 @@
     .travel-plan__content {
         display: flex;
         width: 100%;
-        /* height: 100vh; */
+        height: 100vh;
     }
     .travel-plan__itinerary {
         flex: 0 0 70%;
@@ -14,13 +14,29 @@
         flex-direction: column;
         place-content: center;
     }
+    .travel-plan__background {
+        position: absolute;
+        z-index: 0;
+        width: 100%;
+        height: 100%;
+        background: url('/public/travel-plan/Portugal.svg');
+        background-repeat: no-repeat;
+        opacity: 0.2;
+    }
     .travel-plan__map {
         position: relative;
         flex: 0 0 30%;
         svg {
-            position: absolute;
-            top: 0;
-            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
+    }
+    [data-marker] {
+        transition: fill 0.5s ease-in-out;
+    }
+    svg [data-marker="active"] {
+        fill: #c50505;
+        transition: fill 0.5s ease-in-out;
     }
 }
