--- a/src/section/DiscoverPortugal/DiscoverPortugal.css
+++ b/src/section/DiscoverPortugal/DiscoverPortugal.css
@@ -1,4 +1,7 @@
 .discover-portugal {
+    .discover-portugal__title {
+        padding: 10rem 10rem 5rem 10rem;
+    }
     .discover-portugal__item {
         overflow: hidden;
         width: 100vw;
@@ -13,7 +16,8 @@
             flex: 1 1 50%;
         }
     }
-    .textbox {
+    .discover-portugal__content {
+        z-index: 1;
         max-width: 45%;
         padding: 3rem;
     }
