--- a/src/components/Parallax/Parallax.css
+++ b/src/components/Parallax/Parallax.css
@@ -1,6 +1,6 @@
 .parallax {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
     display: flex;
@@ -10,10 +10,7 @@
         z-index: 2;
         text-align: center;
         position: absolute;
-        /* top: 50%; */
         inset: 20% 0 0 0;
-        /* margin: auto; */
-        /* left: 50%; */
         transform: translateY(calc(var(--scrollTop) / 1.3));
     }
     .parallax__full,
@@ -73,4 +70,26 @@
             background-image: url('/public/parallax/4K/front.png');
         }
     }
+    .parallax__scroll {
+        position: absolute;
+        bottom: 2rem;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 10;
+        text-align: center;
+        transition: all 0.3s ease-out;
+        &:hover {
+            bottom: 1.5rem;
+            transition: bottom 0.3s ease-out;
+        }
+        > * {
+            color: #fff;
+            height: 50px;
+            width: 50px;
+        }
+        &.--opacity {
+            opacity: 0;
+            transition: opacity 0.3s ease-out;
+        }
+      }
 }
