--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -14,7 +14,7 @@
     font-size: 2rem;
     color: #808080ab;
 }
-.title._active {
+.title.--active {
     letter-spacing: -0.75rem;
     color: #ffffff56;
     transition: all 1s ease-out;
