--- a/src/components/layout/Header/Header.css
+++ b/src/components/layout/Header/Header.css
@@ -1,11 +1,42 @@
 .header {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
-    & .logo {
+    .header__panel {
+      width: 100%;
+      padding: 1rem;
       position: absolute;
-      top: 1rem;
-      left: 1rem;
+      top: 0;
       z-index: 10;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .link-send {
+      font-size: 1.2rem;
+      font-weight: 600;
+      letter-spacing: 0.05rem;
+      color: #fff;
+      display: flex;
+      place-items: center;
+      gap: 0.5rem;
+      position: relative;
+      &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: -5px;
+        width: 100%;
+        height: 2px;
+        background-color: #fff;
+        transform: scale(0, 1);
+        transition: transform 0.5s ease-out;
+        transform-origin: right top;
+      }
+      &:hover::before,
+      &:focus::before {
+        transform: scale(1, 1);
+        transform-origin: left top;
+      }
     }
 }
