--- a/src/section/DiscoverPortugal/DiscoverPortugal.css
+++ b/src/section/DiscoverPortugal/DiscoverPortugal.css
@@ -1,6 +1,7 @@
 .discover-portugal {
     .discover-portugal__title {
         padding: 10rem 10rem 5rem 10rem;
+        border-bottom: 3px solid #034903;
     }
     .discover-portugal__item {
         overflow: hidden;
@@ -12,7 +13,7 @@
         gap: 6rem;
         position: sticky;
         top: 0;
-         * {
+        * {
             flex: 1 1 50%;
         }
     }
