--- a/src/section/Contacts/ContactUs.css
+++ b/src/section/Contacts/ContactUs.css
@@ -1,5 +1,6 @@
 .contact-us {
     background-color: #e5edee;
+    padding-bottom: 15rem;
     .contacts-us__text {
         padding: 10rem 10rem 5rem 10rem;
     }
