--- a/src/section/Contacts/ContactUs.css
+++ b/src/section/Contacts/ContactUs.css
@@ -92,7 +92,9 @@
         font-weight: 600;
         letter-spacing: 0.1rem;
         color: #fff;
+        transition: background-color 0.3s ease-out;
         &:hover {
+            transition: background-color 0.3s ease-out;
             background-color: #034903bd;
         }
         &:active {
