--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
 body {
-  /* margin: 0; */
-  overflow-x: hidden;
+  width: 100%;
 }
 #app {
   background-color: #ffffff;
   color: #000;
 }
-.three {
-  width: 100%;
-  height: 100vh;
+[class*='__container'] {
+  max-width: var(--max-width-container);
+  margin: 0 auto;
+  position: relative;
+  /* width: 100%; */
+  /* height: 100%; */
 }
