--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -23,5 +23,18 @@
             font-weight: 500;
             letter-spacing: 0.1rem;
         }
+        @media screen and (max-width: 500px) {
+            position: absolute;
+            width: 100%;
+            top: 5rem;
+            left: 0;
+            z-index: 10;
+            background-color: #808080e7;
+            align-items: center;
+            a {
+                font-size: 1.5rem;
+                line-height: 2;
+            }
+        }
     }
 }
