--- a/src/components/Textbox/Textbox.css
+++ b/src/components/Textbox/Textbox.css
@@ -2,7 +2,7 @@
     z-index: 1;
     text-align: center;
     .textbox__title {
-        font-size: 3rem;
+        font-size: clamp(1.5rem, 4.6875vw, 3rem);
         font-weight: 700;
         letter-spacing: 0.2rem;
         color: #034903;
@@ -11,7 +11,10 @@
         }
     }
     .textbox__text {
-        font-size: 1.2rem;
+        font-size: clamp(1rem, 1.875vw, 1.2rem);
         letter-spacing: 0.1rem;
+        @media screen and (min-width: 1921px) {
+            font-size: 2rem;
+        }
     }
 }
