--- a/src/components/layout/Footer/Footer.css
+++ b/src/components/layout/Footer/Footer.css
@@ -6,13 +6,19 @@
         background-color: #034903;
         display: flex;
         align-items: center;
+        gap: 3rem;
+        flex-wrap: wrap;
         justify-content: space-around;
         position: relative;
     }
     .footer__company {
         display: flex;
-        gap: 6rem;
+        gap: 2rem;
         align-items: center;
+        @media screen and (max-width: 550px) {
+            justify-content: center;
+            flex-wrap: wrap;
+        }
         .footer__name {
             color: #FFF;
             font-size: 3rem;
@@ -34,8 +40,11 @@
     }
     .footer__links {
         display: flex;
-        gap: 3rem;
+        gap: 2rem;
         align-items: center;
+        @media screen and (max-width: 550px) {
+            flex-wrap: wrap;
+        }
         a {
             color: #FFF;
             &:hover {
