--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  --max-width-container: 2560px; 
 }
 
 * {
