--- a/src/section/About/About.css
+++ b/src/section/About/About.css
@@ -1,7 +1,10 @@
 .about {
     background-color: #e5edee;
     .about__info {
-        padding: 10rem 10rem 5rem 10rem;
+        padding: clamp(3rem, 12.5vw, 8rem) clamp(3rem, 12.5vw, 8rem) 5rem clamp(3rem, 12.5vw, 8rem);
+        @media screen and (max-width: 424px) {
+            padding: 3rem 2rem;
+        }
     }
     .about__feedback {
         padding: 3rem;
@@ -19,7 +22,7 @@
         border-bottom: 3px solid #034903;
     }
     .about__text {
-        flex: 1 0 50%;
+        flex: 0 0 35%;
         h3 {
             font-size: 2rem;
             font-weight: 700;
@@ -27,49 +30,111 @@
             text-wrap: wrap;
             color: #000;
         }
+        @media screen and (max-width: 1023px) {
+            background-color: #fff;
+            z-index: 10;
+            position: absolute;
+            width: 100%;
+            top: 0;
+            left: 0;
+            padding: 1rem 1rem 2rem 1rem;
+            text-align: center;
+            h3 {
+                font-size: clamp(1rem, 3.125vw, 2rem);
+            }
+        }
     }
     .about__clients {
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
         position: absolute;
-        width: 50%;
+        max-width: 65%;
+        left: 45%;
         right: -1.5rem;
         transition: all 3s ease-out;
         top: calc(-1.5rem - 50%);
+        @media screen and (max-width: 1023px) {
+            top: calc(0.5rem - 50%);
+            max-width: 100%;
+            left: 3.5rem;
+        }
+        @media screen and (max-width: 600px) {
+            left: 0;
+        }
     }
 }
 
 .about__clients .card {
+    min-width: 100%;
+    min-height: 7.8125rem;
     position: absolute;
     transition: all 1.5s ease-out;
     &:nth-child(1) {
         top: 0;
-        transform: translateX(80px);
+        transform: translateX(5rem);
     }
     &:nth-child(2) {
-        top: 150px;
-        transform: translateX(40px);
+        top: 9.375rem;
+        transform: translateX(2.5rem);
     }
     &:nth-child(3) {
-        top: 300px;
+        top: 18.75rem;
         transform: translateX(0px);
     }
     &:nth-child(4) {
-        top: 450px;
+        top: 28.125rem;
         border: 2px solid #034903;
-        transform: translateX(-40px);
+        transform: translateX(-2.5rem);
     }
     &:nth-child(5) {
-        top: 600px;
+        top: 37.5rem;
         transform: translateX(0px);
     }
     &:nth-child(6) {
-        top: 750px;
-        transform: translateX(40px);
+        top: 46.875rem;
+        transform: translateX(2.5rem);
     }
     &:nth-child(7) {
-        top: 900px;
-        transform: translateX(80px);
+        top: 56.25rem;
+        transform: translateX(5rem);
+    }
+    @media screen and (max-width: 600px) {
+        &:nth-child(n) {
+            transform: none;
+        }
+        &:nth-child(1) {
+            right: -300%;
+            top: 6.25rem;
+        }
+        &:nth-child(2) {
+            right: -200%;
+            top: 12.5rem;
+        }
+        &:nth-child(3) {
+            right: -80%;
+            top: 18.75rem;
+            opacity: 0.65;
+        }
+        &:nth-child(4) {
+            right: 0.8rem;
+            top: 25rem;
+            opacity: 1;
+            background-color: #80808054;
+        }
+        &:nth-child(5) {
+            right: 95%;
+            top: 31.25rem;
+            opacity: 0.65;
+            z-index: 10;
+        }
+        &:nth-child(6) {
+            right: 120%;
+            top: 37.5rem;
+        }
+        &:nth-child(7) {
+            right: 300%;
+            top: 43.75rem;
+        }
     }
 }
