--- a/src/section/Contacts/ContactUs.css
+++ b/src/section/Contacts/ContactUs.css
@@ -2,7 +2,10 @@
     background-color: #e5edee;
     padding-bottom: 15rem;
     .contacts-us__text {
-        padding: 10rem 10rem 5rem 10rem;
+        padding: clamp(3rem, 12.5vw, 8rem) clamp(3rem, 12.5vw, 8rem) 5rem clamp(3rem, 12.5vw, 8rem);
+        @media screen and (max-width: 424px) {
+            padding: 3rem 2rem;
+        }
     }
 }
 
@@ -16,6 +19,9 @@
     padding: 4rem 8rem;
     border-top: 3px solid #034903;
     border-bottom: 3px solid #034903;
+    @media screen and (max-width: 1023px) {
+        padding: 2rem 1rem;
+    }
     .form__content {
         width: 80%;
         display: flex;
@@ -28,7 +34,7 @@
         }
     }
     .form__label {
-        font-size: 1.1rem;
+        font-size: clamp(0.8rem, 2.3vw, 1.1rem);
         font-weight: 600;
         color: #808080;
         letter-spacing: 0.05rem;
@@ -42,15 +48,17 @@
         border: 2px solid #808080b0;
         border-radius: 5px;
         transition: all 0.5s ease-out;
+        background-color: transparent;
     }
     .form__textarea {
         resize: none;
         width: 100%;
-        height: 300px;
+        height: clamp(12rem, 39vw, 18.75rem);
         border: 2px solid #808080b0;
         padding: 1rem;
         border-radius: 5px;
         transition: all 0.5s ease-out;
+        background-color: transparent;
         &::-webkit-scrollbar {
             width: 8px;
         }
@@ -75,7 +83,7 @@
         transition: all 0.3s ease-out;
         top: 0;
         transform: translateY(-50%);
-        font-size: 1rem;
+        font-size: clamp(0.7rem, 2.1vw, 1rem);
         padding: 0 0.5rem;
         background-color: #FFF;
         color: #034903;
@@ -93,6 +101,9 @@
         letter-spacing: 0.1rem;
         color: #fff;
         transition: background-color 0.3s ease-out;
+        @media screen and (max-width: 1023px) {
+            padding: 2rem 3rem;
+        }
         &:hover {
             transition: background-color 0.3s ease-out;
             background-color: #034903bd;
