--- a/src/section/FAQs/FAQs.css
+++ b/src/section/FAQs/FAQs.css
@@ -1,7 +1,10 @@
 .faqs {
     background-color: #e5edee;
     .faqs__text {
-        padding: 10rem 10rem 5rem 10rem;
+        padding: clamp(3rem, 12.5vw, 8rem) clamp(3rem, 12.5vw, 8rem) 5rem clamp(3rem, 12.5vw, 8rem);
+        @media screen and (max-width: 424px) {
+            padding: 3rem 2rem;
+        }
     }
     .faqs__questions {
         background-color: #fff;
@@ -15,7 +18,7 @@
         h3 {
             background-color: #fff;
             padding: 2rem;
-            font-size: 1.5rem;
+            font-size: clamp(1rem, 3.125vw, 1.5rem);
             letter-spacing: 0.1rem;
             color: #034903;
             font-weight: 500;
@@ -24,6 +27,9 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            @media screen and (min-width: 1921px) {
+                font-size: 2.2rem;
+            }
             &::after {
                 content: url('/public/icons/chevron-down.svg');
                 width: 1.2rem;
@@ -37,7 +43,10 @@
         }
         p {
             padding: 0 2rem 2rem 2rem;
-            font-size: 1.2rem;
+            font-size: clamp(0.9rem, 2.5vw, 1.2rem);
+            @media screen and (min-width: 1921px) {
+                font-size: 2rem;
+            }
         }
         div {
             height: auto;
@@ -50,14 +59,13 @@
             z-index: -1;
             transition: all 0.3s ease-out;
         }
-        
     }
     .faqs__item:not(:last-child) {
         border-bottom: 1px solid #808080a9;
     }
     .faqs__item.--active {
         div {
-            max-height: 200px;
+            max-height: 2000px;
             transform: translateY(0);
             opacity: 1;
             position: relative;
