--- a/src/section/TravelPlan/TravelPlan.css
+++ b/src/section/TravelPlan/TravelPlan.css
@@ -2,18 +2,29 @@
     background-color: #e5edee;
     .travel-plan__text {
         border-top: 3px solid #034903;
-        padding: 10rem 10rem 5rem 10rem;
+        padding: clamp(3rem, 12.5vw, 8rem) clamp(3rem, 12.5vw, 8rem) 5rem clamp(3rem, 12.5vw, 8rem);
+        @media screen and (max-width: 424px) {
+            padding: 3rem 2rem;
+        }
     }
     .travel-plan__content {
         display: flex;
         width: 100%;
         height: 100vh;
+        @media screen and (max-width: 550px) {
+            height: auto;
+        }
+        
     }
     .travel-plan__itinerary {
         flex: 0 0 70%;
         display: flex;
         flex-direction: column;
         place-content: center;
+        @media screen and (max-width: 550px) {
+            flex: 0 0 100%;
+            padding: 3rem 1rem;
+        }
     }
     .travel-plan__background {
         position: absolute;
@@ -31,6 +42,9 @@
             width: 100%;
             height: 100%;
             object-fit: contain;
+        }
+        @media screen and (max-width: 550px) {
+            display: none;
         }
     }
     [data-marker] {
