--- a/src/components/Stepper/Stepper.css
+++ b/src/components/Stepper/Stepper.css
@@ -1,55 +1,55 @@
 .stepper {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin: 0 auto;
+  position: relative;
+  @media screen and (min-width: 1921px) {
+    gap: 4rem;
+  }
+  .stepper__item {
     display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    margin: 0 auto;
-    position: relative;
-    @media screen and (min-width: 1921px) {
-        gap: 4rem;
+    align-items: center;
+    gap: clamp(1rem, 8.72vw, 3rem);
+    button {
+      width: 18px;
+      height: 18px;
+      border-radius: 50%;
+      border: none;
+      background-color: #808080;
+      position: relative;
+      transition: all 0.4s ease-out;
+      &:hover {
+        transform: translateY(-2px);
+      }
     }
-    .stepper__item {
-        display: flex;
-        align-items: center;
-        gap: clamp(1rem, 8.72vw, 3rem);
-        button {
-            width: 18px;
-            height: 18px;
-            border-radius: 50%;
-            border: none;
-            background-color: #808080; 
-            position: relative;
-            transition: all 0.4s ease-out;
-            &:hover {
-                transform: translateY(-2px);
-            }
-        }
-        button::before {
-            display: block;
-            position: absolute;
-            top: 18px;
-            left: 50%;
-            transform: translateX(-50%);
-            margin: 0 auto;
-            content: "";
-            background-color: #808080;
-            width: 2px;
-            height: 70%;
-            transition: all 0.4s ease-out;
-        }
-        p {
-            font-size: clamp(0.9rem, 3.5vw, 1.2rem);
-            font-weight: 600;
-            letter-spacing: 0.1rem;
-            @media screen and (min-width: 1921px) {
-                font-size: 2rem;
-            }
-        }
+    button::before {
+      display: block;
+      position: absolute;
+      top: 18px;
+      left: 50%;
+      transform: translateX(-50%);
+      margin: 0 auto;
+      content: '';
+      background-color: #808080;
+      width: 2px;
+      height: 70%;
+      transition: all 0.4s ease-out;
     }
-    
-    .stepper__item.--active {
-        button {
-            background-color: #c50505;
-            transition: all 0.4s ease-out;
-        }
+    p {
+      font-size: clamp(0.9rem, 3.5vw, 1.2rem);
+      font-weight: 600;
+      letter-spacing: 0.1rem;
+      @media screen and (min-width: 1921px) {
+        font-size: 2rem;
+      }
     }
+  }
+
+  .stepper__item.--active {
+    button {
+      background-color: #c50505;
+      transition: all 0.4s ease-out;
+    }
+  }
 }
