--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,33 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap');
 .title {
-    font-family: "Space Grotesk", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-size: clamp(3rem, 12.5vw, 8rem);
-    letter-spacing: clamp(0.5rem, 1.5625vw, 1rem);
-    text-transform: uppercase;
-    color: #fff;
-    transition: all 0.5s ease-out;
-    @media screen and (min-width: 1921px) {
-        font-size: 12rem;
-    }
+  font-family: 'Space Grotesk', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-size: clamp(3rem, 12.5vw, 8rem);
+  letter-spacing: clamp(0.5rem, 1.5625vw, 1rem);
+  text-transform: uppercase;
+  color: #fff;
+  transition: all 0.5s ease-out;
+  @media screen and (min-width: 1921px) {
+    font-size: 12rem;
+  }
 }
 .title__mini {
-    display: block;
-    font-size: clamp(1rem, 3.125vw, 2rem);
-    letter-spacing: clamp(0.3rem, 1.5625vw, 1rem);
-    color: #808080ab;
-    @media screen and (min-width: 1921px) {
-        font-size: 3rem;
-    }
+  display: block;
+  font-size: clamp(1rem, 3.125vw, 2rem);
+  letter-spacing: clamp(0.3rem, 1.5625vw, 1rem);
+  color: #808080ab;
+  @media screen and (min-width: 1921px) {
+    font-size: 3rem;
+  }
 }
 .title.--active {
-    letter-spacing: -0.75rem;
-    color: #ffffff56;
+  letter-spacing: -0.75rem;
+  color: #ffffff56;
+  transition: all 1s ease-out;
+  .title__mini {
+    color: #80808036;
+    letter-spacing: normal;
     transition: all 1s ease-out;
-    .title__mini {
-        color: #80808036;
-        letter-spacing: normal;
-        transition: all 1s ease-out;
-    }
+  }
 }
