--- a/src/section/DiscoverPortugal/DiscoverPortugal.css
+++ b/src/section/DiscoverPortugal/DiscoverPortugal.css
@@ -1,54 +1,55 @@
 .discover-portugal {
-    .discover-portugal__title {
-        padding: clamp(3rem, 12.5vw, 8rem) clamp(3rem, 12.5vw, 8rem) 5rem clamp(3rem, 12.5vw, 8rem);
-        border-bottom: 3px solid #034903;
-        @media screen and (max-width: 424px) {
-            padding: 3rem 2rem;
-        }
+  .discover-portugal__title {
+    padding: clamp(3rem, 12.5vw, 8rem) clamp(3rem, 12.5vw, 8rem) 5rem
+      clamp(3rem, 12.5vw, 8rem);
+    border-bottom: 3px solid #034903;
+    @media screen and (max-width: 424px) {
+      padding: 3rem 2rem;
     }
-    .discover-portugal__item {
-        overflow: hidden;
-        height: 100vh;
-        padding: 5rem;
-        display: flex;
-        align-items: center;
-        gap: 6rem;
-        position: sticky;
-        top: 0;
-        * {
-            flex: 1 1 50%;
-        }
-        @media screen and (max-width: 1023px) {
-            flex-direction: column;
-            gap: 0;
-            padding: 0;
-        }
+  }
+  .discover-portugal__item {
+    overflow: hidden;
+    height: 100vh;
+    padding: 5rem;
+    display: flex;
+    align-items: center;
+    gap: 6rem;
+    position: sticky;
+    top: 0;
+    * {
+      flex: 1 1 50%;
     }
-    .discover-portugal__content {
-        z-index: 1;
-        max-width: 45%;
-        padding: clamp(1rem, 4.6875vw, 3rem);
-        @media screen and (max-width: 1023px) {
-            max-width: 100%;
-            display: flex;
-            align-items: center;
-        }
+    @media screen and (max-width: 1023px) {
+      flex-direction: column;
+      gap: 0;
+      padding: 0;
     }
-    .discover-portugal__image {
-        position: absolute;
-        top: 0;
-        right: -50%;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transition: right 1s ease-out;
-        &:hover {
-            right: 0;
-            transition: right 1s ease-out;
-        }
-        @media screen and (max-width: 1023px) {
-            position: static;
-            order: 1;
-        }
+  }
+  .discover-portugal__content {
+    z-index: 1;
+    max-width: 45%;
+    padding: clamp(1rem, 4.6875vw, 3rem);
+    @media screen and (max-width: 1023px) {
+      max-width: 100%;
+      display: flex;
+      align-items: center;
     }
+  }
+  .discover-portugal__image {
+    position: absolute;
+    top: 0;
+    right: -50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: right 1s ease-out;
+    &:hover {
+      right: 0;
+      transition: right 1s ease-out;
+    }
+    @media screen and (max-width: 1023px) {
+      position: static;
+      order: 1;
+    }
+  }
 }
