--- a/src/section/TravelPlan/TravelPlan.css
+++ b/src/section/TravelPlan/TravelPlan.css
@@ -1,57 +1,57 @@
 .travel-plan {
-    background-color: #e5edee;
-    .travel-plan__text {
-        border-top: 3px solid #034903;
-        padding: clamp(3rem, 12.5vw, 8rem) clamp(3rem, 12.5vw, 8rem) 5rem clamp(3rem, 12.5vw, 8rem);
-        @media screen and (max-width: 424px) {
-            padding: 3rem 2rem;
-        }
+  background-color: #e5edee;
+  .travel-plan__text {
+    border-top: 3px solid #034903;
+    padding: clamp(3rem, 12.5vw, 8rem) clamp(3rem, 12.5vw, 8rem) 5rem
+      clamp(3rem, 12.5vw, 8rem);
+    @media screen and (max-width: 424px) {
+      padding: 3rem 2rem;
     }
-    .travel-plan__content {
-        display: flex;
-        width: 100%;
-        height: 100vh;
-        @media screen and (max-width: 550px) {
-            height: auto;
-        }
-        
+  }
+  .travel-plan__content {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    @media screen and (max-width: 550px) {
+      height: auto;
     }
-    .travel-plan__itinerary {
-        flex: 0 0 70%;
-        display: flex;
-        flex-direction: column;
-        place-content: center;
-        @media screen and (max-width: 550px) {
-            flex: 0 0 100%;
-            padding: 3rem 1rem;
-        }
+  }
+  .travel-plan__itinerary {
+    flex: 0 0 70%;
+    display: flex;
+    flex-direction: column;
+    place-content: center;
+    @media screen and (max-width: 550px) {
+      flex: 0 0 100%;
+      padding: 3rem 1rem;
     }
-    .travel-plan__background {
-        position: absolute;
-        z-index: 0;
-        width: 100%;
-        height: 100%;
-        background: url('/public/travel-plan/Portugal.svg');
-        background-repeat: no-repeat;
-        opacity: 0.2;
+  }
+  .travel-plan__background {
+    position: absolute;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    background: url('/public/travel-plan/Portugal.svg');
+    background-repeat: no-repeat;
+    opacity: 0.2;
+  }
+  .travel-plan__map {
+    position: relative;
+    flex: 0 0 30%;
+    svg {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
     }
-    .travel-plan__map {
-        position: relative;
-        flex: 0 0 30%;
-        svg {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
-        @media screen and (max-width: 550px) {
-            display: none;
-        }
+    @media screen and (max-width: 550px) {
+      display: none;
     }
-    [data-marker] {
-        transition: fill 0.5s ease-in-out;
-    }
-    svg [data-marker="active"] {
-        fill: #c50505;
-        transition: fill 0.5s ease-in-out;
-    }
+  }
+  [data-marker] {
+    transition: fill 0.5s ease-in-out;
+  }
+  svg [data-marker='active'] {
+    fill: #c50505;
+    transition: fill 0.5s ease-in-out;
+  }
 }
