--- a/src/components/Parallax/Parallax.css
+++ b/src/components/Parallax/Parallax.css
@@ -12,6 +12,7 @@
     position: absolute;
     inset: 20% 0 0 0;
     transform: translateY(calc(var(--scrollTop) / 1.3));
+    transition: transform 0.2s cubic-bezier(0.075, 0.5, 0, 1);
   }
   .parallax__full,
   .parallax__back,
